--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -407,6 +407,7 @@
                 bottom: 0;
                 text-align: left;
                 z-index: 1;
+                height: 40%;
                
 
                 // &.dark{
@@ -414,29 +415,34 @@
                 //     background-image: linear-gradient(90deg, #fff 8%, #000 8%);  
                 //     // background-image: linear-gradient(90deg, #fff 100%, #000 10%);  
                 // }
-
-                &__label{
-                    opacity: 1;
-                    font-size: 1.1em;
-                }
     
-    
-                &__name{
-                    font-size: 3em;
-                    // background-color: #000;
-                    // // background-image: linear-gradient(90deg, #000 77.5%, #fff 10%);
-                    // background-size: 100%;
-                    // background-clip: text;
-                    // background-image: linear-gradient(90deg, #000 8%, #fff 6%);  
-                     
-                    // -webkit-background-clip: text;
-                    // -moz-background-clip: text;
-                    // -webkit-text-fill-color: transparent; 
-                    // -moz-text-fill-color: transparent;
+                &__mainInfo{
+                    background-color: brown;
+                    &__name{
+                        font-size: 3em;
+                        // background-color: #000;
+                        // // background-image: linear-gradient(90deg, #000 77.5%, #fff 10%);
+                        // background-size: 100%;
+                        // background-clip: text;
+                        // background-image: linear-gradient(90deg, #000 8%, #fff 6%);  
+                         
+                        // -webkit-background-clip: text;
+                        // -moz-background-clip: text;
+                        // -webkit-text-fill-color: transparent; 
+                        // -moz-text-fill-color: transparent;
+                    }
                 }
 
-                &__birth_name{
-                    margin-top: 3em;
+                &__otherInfo{
+                    background-color: darkolivegreen;
+                    &__label{
+                        opacity: 1;
+                        font-size: 1.1em;
+                    }
+    
+                    &__birth_name{
+                        margin-top: 3em;
+                    }
                 }
             }
         }
