--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -244,7 +244,7 @@ header{
                                     width: 0%;
                                     height: 120px;
                                     background: url('../../images/members/wonwoo_attacca_op1.jpg') no-repeat fixed center;
-                                    background-size: cover;
+                                    // background-size: cover;
                                     overflow: hidden;
                                 }
                             }
@@ -317,7 +317,7 @@ header{
                                     width: 0%;
                                     height: 120px;
                                     background: url('../../images/members/dk_attacca_op1.jpg') no-repeat fixed center;
-                                    background-size: cover;
+                                    // background-size: cover;
                                     overflow: hidden;
                                 }
 
