--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -89,7 +89,7 @@
     // }
     .menu_btn{
         // position: absolute;
-        top: 1em;
+        top: 0;
         // right: 3em;
         // left: 28em;
         // left: 93%;
@@ -454,23 +454,30 @@
     }
 
     .theDiv{
-        width: 80%;
+        width: 90%;
         height: 100%;
-        overflow: hidden;
+        overflow-y: auto;
+        background-color: aquamarine;
+
+        .close{
+            top: 1.3em;
+            right: 0;
+            position: fixed;
+        }
 
         .membersCarousel{
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
             // overflow: scroll;
             margin: auto;
-            overflow: hidden;
+            overflow-y: auto;
     
             &__paragraph{
                 white-space: normal;;
                 
                 li{
                     list-style: none;
-                    width: 30%;
+                    width: 200px;
                     height: 250px;
                     display: inline-block;
                     align-items: baseline;
@@ -558,6 +565,8 @@
             .member_name{
                 font-size: 3.2em;
                 padding: 0.5em;
+                bottom: 0;
+                position: fixed;
     
             }
         }
@@ -793,6 +802,7 @@
                             font-size: 1em;
                             margin-left: -20px;
                             width: 20%;
+                            text-align: left;
                         }
                         
                         &::before{
@@ -932,7 +942,7 @@
             &__concerts{
                 margin-top: 40%;
     
-                &::before{
+                p{
                     font-size: 5em;
                 }
             }
