--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -456,7 +456,7 @@
     .theDiv{
         width: 90%;
         height: 100%;
-        overflow-y: auto;
+        overflow-y: hidden;
         background-color: aquamarine;
 
         .close{
@@ -470,28 +470,31 @@
             height: 100%;
             // overflow: scroll;
             margin: auto;
-            overflow-y: auto;
     
             &__paragraph{
-                white-space: normal;;
+                white-space: normal;
+                // position: relative;
+                overflow: auto;
+                display: flex;
+                flex-wrap: wrap;
                 
                 li{
                     list-style: none;
-                    width: 200px;
-                    height: 250px;
-                    display: inline-block;
-                    align-items: baseline;
+                    // height: 250px;
+                    margin: 2px;
+                    flex: 48%;
+                    max-width: 100%;
+                    
                     
     
                     span{
-                        width: 100%;
-                        height: 250px;
                         .membersCarousel__paragraph__image{
-                            position: absolute;
                             width: 100%;
-                            height: 250px;
-                            object-fit: contain;
-                            // transition: all 1s cubic-bezier(0.1, 0.7, 1.0, 0.1);
+                            max-height: 100%;
+                            min-width: 100%;
+                            object-fit: cover;
+                            object-position: center 20%;
+                            vertical-align: bottom;
                         }
                     }
     
@@ -564,7 +567,7 @@
     
             .member_name{
                 font-size: 3.2em;
-                padding: 0.5em;
+                padding: 0.3em;
                 bottom: 0;
                 position: fixed;
     
