--- a/scss/main.css
+++ b/scss/main.css
@@ -2563,7 +2563,7 @@ header {
   .theDiv {
     width: 90%;
     height: 100%;
-    overflow-y: auto;
+    overflow-y: hidden;
     background-color: aquamarine;
   }
   .theDiv .close {
@@ -2575,30 +2575,33 @@ header {
     width: 100%;
     height: 100%;
     margin: auto;
-    overflow-y: auto;
   }
   .theDiv .membersCarousel__paragraph {
     white-space: normal;
+    overflow: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .theDiv .membersCarousel__paragraph li {
     list-style: none;
-    width: 200px;
-    height: 250px;
-    display: inline-block;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
-  }
-  .theDiv .membersCarousel__paragraph li span {
-    width: 100%;
-    height: 250px;
+    margin: 2px;
+    -webkit-box-flex: 48%;
+        -ms-flex: 48%;
+            flex: 48%;
+    max-width: 100%;
   }
   .theDiv .membersCarousel__paragraph li span .membersCarousel__paragraph__image {
-    position: absolute;
     width: 100%;
-    height: 250px;
-    -o-object-fit: contain;
-       object-fit: contain;
+    max-height: 100%;
+    min-width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center 20%;
+       object-position: center 20%;
+    vertical-align: bottom;
   }
   .theDiv .membersCarousel__paragraph li:nth-child(1) {
     -webkit-filter: grayscale(20%) opacity(0.6);
@@ -2663,7 +2666,7 @@ header {
   }
   .theDiv .membersCarousel .member_name {
     font-size: 3.2em;
-    padding: 0.5em;
+    padding: 0.3em;
     bottom: 0;
     position: fixed;
   }
