--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -402,7 +402,7 @@
         
             &__info{
                 position: absolute;
-                width: 90%;
+                width: 100%;
                 left: 0;
                 bottom: 0;
                 text-align: left;
@@ -417,19 +417,35 @@
                 // }
     
                 &__mainInfo{
-                    background-color: brown;
                     &__name{
                         font-size: 3em;
-                        // background-color: #000;
-                        // // background-image: linear-gradient(90deg, #000 77.5%, #fff 10%);
-                        // background-size: 100%;
-                        // background-clip: text;
-                        // background-image: linear-gradient(90deg, #000 8%, #fff 6%);  
+                        background-color: #000;
+                        // backdrop-filter: blur(1px);
+                        // background-image: linear-gradient(90deg, #000 77.5%, #fff 10%);
+                        background-size: 100%;
+                        background-clip: text;
+                        background-image: linear-gradient(90deg, #000 5%, #fff 5%);  
+                        // background-image: linear-gradient(90deg, #000 30px, #fff 10px);  
                          
-                        // -webkit-background-clip: text;
-                        // -moz-background-clip: text;
-                        // -webkit-text-fill-color: transparent; 
-                        // -moz-text-fill-color: transparent;
+                        -webkit-background-clip: text;
+                        -moz-background-clip: text;
+                        -webkit-text-fill-color: transparent; 
+                        -moz-text-fill-color: transparent;
+                    }
+
+                    &__subunit{
+                        background-color: #000;
+                        // backdrop-filter: blur(1px);
+                        // background-image: linear-gradient(90deg, #000 77.5%, #fff 10%);
+                        background-size: 100%;
+                        background-clip: text;
+                        background-image: linear-gradient(90deg, #000 5%, #fff 5%);  
+                        // background-image: linear-gradient(90deg, #000 30px, #fff 10px);  
+                         
+                        -webkit-background-clip: text;
+                        -moz-background-clip: text;
+                        -webkit-text-fill-color: transparent; 
+                        -moz-text-fill-color: transparent;
                     }
                 }
 
@@ -437,10 +453,10 @@
                     background-color: darkolivegreen;
                     &__label{
                         opacity: 1;
-                        font-size: 1.1em;
+                        font-size: 1.05em;
                     }
     
-                    &__birth_name{
+                    &__position{
                         margin-top: 3em;
                     }
                 }
@@ -457,7 +473,6 @@
         width: 90%;
         height: 100%;
         overflow-y: hidden;
-        background-color: aquamarine;
 
         .close{
             top: 1.3em;
@@ -500,7 +515,7 @@
     
                         &:nth-child(1){
                             // position: fixed;
-                            filter: grayscale(20%) opacity(0.6);
+                            filter: grayscale(100%) opacity(1);
                             // backdrop-filter: blur(20px);
                             transform: translate(0, 0);
                             // transition: all .2s ease-in-out;
@@ -514,7 +529,7 @@
                         &:nth-child(2){
                             // position: fixed;
                             // z-index: 100;
-                            filter: grayscale(20%) opacity(0.6);
+                            filter: grayscale(100%) opacity(1);
                             transform: translate(0, 0%);
                             // -webkit-transform: translate(-10px, 20px) rotate(-10deg);
     
@@ -526,7 +541,7 @@
                         }
                         &:nth-child(3){
                             // position: fixed;
-                            filter: grayscale(20%) opacity(0.6);
+                            filter: grayscale(100%) opacity(1);
                             transform: translate(0, 0);
                             // transition: all .2s ease-in-out;
     
@@ -538,7 +553,7 @@
                         }
                         &:nth-child(4){
                             // position: fixed;
-                            filter: grayscale(20%) opacity(0.6);
+                            filter: grayscale(100%) opacity(1);
                             transform: translate(0, 0) ;
     
                             &:hover{
