--- a/scss/components/pages/_mainMembers.scss
+++ b/scss/components/pages/_mainMembers.scss
@@ -181,7 +181,7 @@
     
                 
     
-                &__birth_name{
+                &__position{
                     margin-top: 2em;
                 }
             }
@@ -264,6 +264,25 @@
         font-family: $discographyfont;
         font-size: 1.2em;
         z-index: 9;
+        cursor: pointer;
+
+        &::before{
+            content: '';
+            position: absolute;
+            top: 1.1em;
+            right: 0;
+            width: 0%;
+            height: 2px;
+            backdrop-filter:invert(100%);
+            overflow: hidden;
+            transition: all 1s cubic-bezier(0.1, 0.7, 1.0, 0.1);
+        }
+
+        &:hover{
+            &::before{
+                width: 100%;
+            }
+        }
     }
 
     .membersCarousel{
@@ -328,7 +347,7 @@
                     &:nth-child(2){
                         // position: fixed;
                         // z-index: 100;
-                        filter: grayscale(70%) opacity(0.5);
+                        filter: grayscale(70%) opacity(0.7);
                         transform: translate(10px, 100%);
                         // -webkit-transform: translate(-10px, 20px) rotate(-10deg);
 
@@ -340,7 +359,7 @@
                     }
                     &:nth-child(3){
                         // position: fixed;
-                        filter: grayscale(70%) opacity(0.2);
+                        filter: grayscale(70%) opacity(0.8);
                         transform: translate(-25px, 0%);
                         // transition: all .2s ease-in-out;
 
@@ -352,7 +371,7 @@
                     }
                     &:nth-child(4){
                         // position: fixed;
-                        filter: grayscale(70%) opacity(0.4);
+                        filter: grayscale(70%) opacity(0.6);
                         transform: translate(-50px, 80%) ;
 
                         &:hover{
@@ -364,7 +383,7 @@
                     }
                     &:nth-child(5){
                         // position: fixed;
-                        filter: grayscale(70%) opacity(0.4);
+                        filter: grayscale(70%) opacity(0.9);
                         transform: translate(-25px, 10%);
 
                         &:hover{
