--- a/scss/main.css
+++ b/scss/main.css
@@ -1591,7 +1591,7 @@ header {
   opacity: .3;
 }
 
-.mainMembers__dets__info__otherInfo__birth_name {
+.mainMembers__dets__info__otherInfo__position {
   margin-top: 2em;
 }
 
@@ -1664,6 +1664,25 @@ header {
   font-family: New York;
   font-size: 1.2em;
   z-index: 9;
+  cursor: pointer;
+}
+
+.theDiv .close::before {
+  content: '';
+  position: absolute;
+  top: 1.1em;
+  right: 0;
+  width: 0%;
+  height: 2px;
+  -webkit-backdrop-filter: invert(100%);
+          backdrop-filter: invert(100%);
+  overflow: hidden;
+  -webkit-transition: all 1s cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: all 1s cubic-bezier(0.1, 0.7, 1, 0.1);
+}
+
+.theDiv .close:hover::before {
+  width: 100%;
 }
 
 .theDiv .membersCarousel {
@@ -1723,8 +1742,8 @@ header {
 }
 
 .theDiv .membersCarousel__paragraph li:nth-child(2) {
-  -webkit-filter: grayscale(70%) opacity(0.5);
-          filter: grayscale(70%) opacity(0.5);
+  -webkit-filter: grayscale(70%) opacity(0.7);
+          filter: grayscale(70%) opacity(0.7);
   -webkit-transform: translate(10px, 100%);
           transform: translate(10px, 100%);
 }
@@ -1737,8 +1756,8 @@ header {
 }
 
 .theDiv .membersCarousel__paragraph li:nth-child(3) {
-  -webkit-filter: grayscale(70%) opacity(0.2);
-          filter: grayscale(70%) opacity(0.2);
+  -webkit-filter: grayscale(70%) opacity(0.8);
+          filter: grayscale(70%) opacity(0.8);
   -webkit-transform: translate(-25px, 0%);
           transform: translate(-25px, 0%);
 }
@@ -1751,8 +1770,8 @@ header {
 }
 
 .theDiv .membersCarousel__paragraph li:nth-child(4) {
-  -webkit-filter: grayscale(70%) opacity(0.4);
-          filter: grayscale(70%) opacity(0.4);
+  -webkit-filter: grayscale(70%) opacity(0.6);
+          filter: grayscale(70%) opacity(0.6);
   -webkit-transform: translate(-50px, 80%);
           transform: translate(-50px, 80%);
 }
@@ -1766,8 +1785,8 @@ header {
 }
 
 .theDiv .membersCarousel__paragraph li:nth-child(5) {
-  -webkit-filter: grayscale(70%) opacity(0.4);
-          filter: grayscale(70%) opacity(0.4);
+  -webkit-filter: grayscale(70%) opacity(0.9);
+          filter: grayscale(70%) opacity(0.9);
   -webkit-transform: translate(-25px, 10%);
           transform: translate(-25px, 10%);
 }
@@ -2533,27 +2552,44 @@ header {
   }
   .mainMembers__dets__info {
     position: absolute;
-    width: 90%;
+    width: 100%;
     left: 0;
     bottom: 0;
     text-align: left;
     z-index: 1;
     height: 40%;
   }
-  .mainMembers__dets__info__mainInfo {
-    background-color: brown;
-  }
   .mainMembers__dets__info__mainInfo__name {
     font-size: 3em;
+    background-color: #000;
+    background-size: 100%;
+    background-clip: text;
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(5%, #000), color-stop(5%, #fff));
+    background-image: linear-gradient(90deg, #000 5%, #fff 5%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+  }
+  .mainMembers__dets__info__mainInfo__subunit {
+    background-color: #000;
+    background-size: 100%;
+    background-clip: text;
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(5%, #000), color-stop(5%, #fff));
+    background-image: linear-gradient(90deg, #000 5%, #fff 5%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
   }
   .mainMembers__dets__info__otherInfo {
     background-color: darkolivegreen;
   }
   .mainMembers__dets__info__otherInfo__label {
     opacity: 1;
-    font-size: 1.1em;
+    font-size: 1.05em;
   }
-  .mainMembers__dets__info__otherInfo__birth_name {
+  .mainMembers__dets__info__otherInfo__position {
     margin-top: 3em;
   }
   .scroll {
@@ -2564,7 +2600,6 @@ header {
     width: 90%;
     height: 100%;
     overflow-y: hidden;
-    background-color: aquamarine;
   }
   .theDiv .close {
     top: 1.3em;
@@ -2604,8 +2639,8 @@ header {
     vertical-align: bottom;
   }
   .theDiv .membersCarousel__paragraph li:nth-child(1) {
-    -webkit-filter: grayscale(20%) opacity(0.6);
-            filter: grayscale(20%) opacity(0.6);
+    -webkit-filter: grayscale(100%) opacity(1);
+            filter: grayscale(100%) opacity(1);
     -webkit-transform: translate(0, 0);
             transform: translate(0, 0);
   }
@@ -2616,8 +2651,8 @@ header {
     transition: all .2s ease-in-out;
   }
   .theDiv .membersCarousel__paragraph li:nth-child(2) {
-    -webkit-filter: grayscale(20%) opacity(0.6);
-            filter: grayscale(20%) opacity(0.6);
+    -webkit-filter: grayscale(100%) opacity(1);
+            filter: grayscale(100%) opacity(1);
     -webkit-transform: translate(0, 0%);
             transform: translate(0, 0%);
   }
@@ -2628,8 +2663,8 @@ header {
     transition: all .2s ease-in-out;
   }
   .theDiv .membersCarousel__paragraph li:nth-child(3) {
-    -webkit-filter: grayscale(20%) opacity(0.6);
-            filter: grayscale(20%) opacity(0.6);
+    -webkit-filter: grayscale(100%) opacity(1);
+            filter: grayscale(100%) opacity(1);
     -webkit-transform: translate(0, 0);
             transform: translate(0, 0);
   }
@@ -2640,8 +2675,8 @@ header {
     transition: all .2s ease-in-out;
   }
   .theDiv .membersCarousel__paragraph li:nth-child(4) {
-    -webkit-filter: grayscale(20%) opacity(0.6);
-            filter: grayscale(20%) opacity(0.6);
+    -webkit-filter: grayscale(100%) opacity(1);
+            filter: grayscale(100%) opacity(1);
     -webkit-transform: translate(0, 0);
             transform: translate(0, 0);
   }
