--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -98,18 +98,159 @@ header{
     }
    
     .colorModeDiv{
-        position: absolute;
+        position: relative;
         width: 100%;
         text-align: center;
         top: 0;
+        height: 80px;
 
-        span {
+        #colorMode {
             font-size: 1em;
             font-family: $discographyfont;
             text-transform: uppercase;
             cursor: pointer;
+            // transition: all 2s ease-in-out;
+
+            .state{
+                position: relative;
+                z-index: 8;
+                // background: rgba(255, 255, 255, 0.2);
+                filter: invert(100%);
+                height: 50px;
+                // opacity: 0.3;
+                color: inherit;
+                mix-blend-mode: difference;
+            }
+
+            .sun{
+                position: absolute;
+                left: 48.8%;
+                width: 150px;
+                height: auto;
+                transition: all 2s ease-in-out;
+                pointer-events: none;
+                fill: white;
+
+                g{
+                    ellipse{
+                        &:nth-of-type(8){
+                            filter: opacity(0);
+                        }
+                    }
+                }
+            }
+
+            .moon{
+                position: absolute;
+                left: 48%;
+                width: 150px;
+                margin-top: 0;
+                height: auto;
+                transition: all 2s ease-in-out;
+                pointer-events: none;
+                fill: black;
+                transform: rotate(30deg);
+                
+            }
+
+            &:hover{
+                // transition: all 2s ease-in-out;
+
+                .moon{
+                    left: 39%;
+                    width: 300px;
+                    margin-top: -3%;
+                    transform: rotate(40deg);
+                    transition: all 2s ease-in-out;
+                }
+                
+                .sun{
+                    left: 45%;
+                    margin-top: 0.7em;
+                    transform: rotate(360deg);
+                    transition: all 2s ease-in-out;
+                    g{
+                        circle{
+                            r: 90;
+                            transition: all 2s ease-in-out;
+                            transition-delay: 2s;
+                        }
+
+                        ellipse{
+                            z-index: -1;
+                            transition: all 2s ease-in-out;
+                            &:nth-of-type(1){
+                                // rx="1.84" ry="11.38"
+                                rx: 5.84;
+                                ry: 28.38;
+                                cy: 85;
+                                transition: all 2s ease-in-out;
+                                transition-delay: 2.9s;
+                            }
+                            &:nth-of-type(2){
+                                // cx="279.94" cy="198.14" rx="1.84" ry="11.38"
+                                rx: 5.84;
+                                ry: 28.38;
+                                cy: 380;
+                                transition: all 2s ease-in-out;
+                                transition-delay: 3.5s;
+                            }
+                            &:nth-of-type(3){
+                                // cx="339.91" cy="258.11"
+                                rx: 5.84;
+                                ry: 28.38;
+                                cy: 70;
+                                transition: all 2s ease-in-out;
+                                transition-delay: 4.3s;
+                            }
+                            &:nth-of-type(4){
+                                // cx="351.29" cy="226.54"
+                                ry: 5.84;
+                                rx: 28.38;
+                                cx: 450;
+                                transition: all 2s ease-in-out;
+                                transition-delay: 3.3s;
+                            }
+                            &:nth-of-type(5){
+                                // cx="310.62" cy="266.31"
+                                rx: 5.84;
+                                ry: 28.38;
+                                cy: 370;
+                                transition: all 2s ease-in-out;
+                                transition-delay: 3.7s;
+                            }
+                            &:nth-of-type(6){
+                                // cx="267.44" cy="226.54"
+                                ry: 5.84;
+                                rx: 28.38;
+                                cx: 170;
+                                transition: all 2s ease-in-out;
+                                transition-delay: 4.1s;
+                            }
+                            &:nth-of-type(7){
+                                // cx="338.55" cy="198.14"
+                                ry: 5.84;
+                                rx: 28.38;
+                                cx: 440;
+                                transition: all 2s ease-in-out;
+                                transition-delay: 3.1s;
+                            }
+                            &:nth-of-type(8){
+                                // cx="279.94" cy="259.35"
+                                filter: opacity(1);
+                                ry: 5.84;
+                                rx: 28.38;
+                                cx: 190;
+                                transition: all 2s ease-in-out;
+                                transition-delay: 3.9s;
+                            }
+                        }
+                    }
+                }
+            }
 
         }
+        
     }
     
     
@@ -205,7 +346,7 @@ header{
                                     width: 0%;
                                     height: 120px;
                                     // filter: grayscale(100%);
-                                    background: url('../../images/members/woozi_attacca_op1.jpg') no-repeat fixed center;
+                                    background: url('../../images/members/vernon/pioneer_vernon copy.jpeg') no-repeat fixed center;
                                     background-size: cover;
                                     overflow: hidden;
                                 }
@@ -243,7 +384,7 @@ header{
                                 .profile-project-preview {
                                     width: 0%;
                                     height: 120px;
-                                    background: url('../../images/members/wonwoo_attacca_op1.jpg') no-repeat fixed center;
+                                    background: url('../../images/members/wonwoo/wonwoo_attacca_op1.jpg') no-repeat fixed center;
                                     // background-size: cover;
                                     overflow: hidden;
                                 }
@@ -316,7 +457,7 @@ header{
                                     position: fixed;
                                     width: 0%;
                                     height: 120px;
-                                    background: url('../../images/members/dk_attacca_op1.jpg') no-repeat fixed center;
+                                    background: url('../../images/members/joshua/ray_joshua.jpeg') no-repeat fixed center;
                                     // background-size: cover;
                                     overflow: hidden;
                                 }
@@ -354,7 +495,7 @@ header{
 
         a {
             text-decoration: none;
-            transition: 1.5s ease-in;  
+            // transition: 1.5s ease-in;  
             &::before{
                 content: attr(data-text);
                 position: absolute;
@@ -396,7 +537,6 @@ header{
                 &:hover{
                     color: inherit;
                     transition: .2s ease-in;
-
                     
                 }
             }
