--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -315,7 +315,7 @@
             // text-align: center;
 
             &__image{
-                background: url("../../../images/home_page/attacca/attacca_group_photo_1.jpeg") no-repeat fixed 57%;
+                background: url("../../../images/group/path_group.jpeg") no-repeat fixed 57%;
                 background-size: cover;
                 // filter: grayscale(80%) opacity(0.5);
                 // filter: grayscale(80%) hue-rotate(20);
@@ -502,8 +502,8 @@
                     
                     
     
-                    span{
-                        .membersCarousel__paragraph__image{
+                    div{
+                        img{
                             width: 100%;
                             max-height: 100%;
                             min-width: 100%;
@@ -565,7 +565,7 @@
                         }
                         &:nth-child(5){
                             // position: fixed;
-                            filter: grayscale(20%) opacity(0.6);
+                            filter: grayscale(80%);
                             transform: translate(0, 0);
     
                             &:hover{
@@ -824,8 +824,9 @@
                         }
                         
                         &::before{
-                            font-size: 2em;
-                            right: -0.5em;
+                            font-size: 1.7em;
+                            right: -0.6em;
+                            top: -0.1em;
                         }
     
                     }
