--- a/scss/components/pages/_mainHome.scss
+++ b/scss/components/pages/_mainHome.scss
@@ -23,9 +23,10 @@
         
 
         &__image{
-            background: url("../../../images/home_page/attacca/attacca_group_photo_2.jpeg") no-repeat fixed center 55%;
+            background: url("../../../images/group/control_group.jpeg") no-repeat fixed center 55%;
             background-size: cover;
-            filter: grayscale(100%) brightness(70%);
+            // filter: grayscale(100%) brightness(70%);
+            filter: grayscale(100%);
             // filter: grayscale(80%)  opacity(0.7);
             // filter: grayscale(80%) hue-rotate(20);
             width: 100%;
