--- a/scss/components/pages/_mainMembers.scss
+++ b/scss/components/pages/_mainMembers.scss
@@ -275,7 +275,7 @@
             height: 2px;
             backdrop-filter:invert(100%);
             overflow: hidden;
-            transition: all 1s cubic-bezier(0.1, 0.7, 1.0, 0.1);
+            transition: all 1s ease-in-out;
         }
 
         &:hover{
@@ -312,14 +312,30 @@
                 align-items: baseline;
                 
 
-                span{
+                div{
                     width: 100%;
-                    height: 320px;
-                    .membersCarousel__paragraph__image{
+                    height: 330px;
+
+                    img{
                         position: absolute;
                         width: 100%;
                         height: 330px;
                         object-fit: cover;
+
+                        // &:hover{
+                        //     &:nth-child(1){
+                        //         height: 330px;
+                        //     transition: all 1s cubic-bezier(0.1, 0.7, 1.0, 0.1);
+                        //     }
+                        // }
+
+                        // &:nth-child(1){
+                        //     height: 20px;
+                        //     transition: all 1s cubic-bezier(0.1, 0.7, 1.0, 0.1);
+
+
+                           
+                        // }
                         // transition: all 1s cubic-bezier(0.1, 0.7, 1.0, 0.1);
                     }
 
@@ -333,7 +349,7 @@
 
                     &:nth-child(1){
                         // position: fixed;
-                        filter: grayscale(70%) opacity(0.7);
+                        filter: grayscale(70%) ;
                         // backdrop-filter: blur(20px);
                         transform: translate(0px, 10%);
                         // transition: all .2s ease-in-out;
@@ -347,7 +363,8 @@
                     &:nth-child(2){
                         // position: fixed;
                         // z-index: 100;
-                        filter: grayscale(70%) opacity(0.7);
+                        filter: grayscale(70%) ;
+                        // height: 100px;;
                         transform: translate(10px, 100%);
                         // -webkit-transform: translate(-10px, 20px) rotate(-10deg);
 
@@ -359,7 +376,7 @@
                     }
                     &:nth-child(3){
                         // position: fixed;
-                        filter: grayscale(70%) opacity(0.8);
+                        filter: grayscale(70%);
                         transform: translate(-25px, 0%);
                         // transition: all .2s ease-in-out;
 
@@ -371,7 +388,7 @@
                     }
                     &:nth-child(4){
                         // position: fixed;
-                        filter: grayscale(70%) opacity(0.6);
+                        filter: grayscale(70%);
                         transform: translate(-50px, 80%) ;
 
                         &:hover{
@@ -383,7 +400,7 @@
                     }
                     &:nth-child(5){
                         // position: fixed;
-                        filter: grayscale(70%) opacity(0.9);
+                        filter: grayscale(70%);
                         transform: translate(-25px, 10%);
 
                         &:hover{
