--- a/scss/components/pages/_mainProfile.scss
+++ b/scss/components/pages/_mainProfile.scss
@@ -70,7 +70,7 @@
             // text-align: right;
             // padding: 2em;
             // background: url("../../../images/members/woozi_attacca_op1.jpg") no-repeat fixed center;
-            background: url("../../../images/home_page/attacca/attacca_group_photo_1.jpeg") no-repeat fixed center;
+            background: url("../../../images/group/attacca_group_photo_1.jpeg") no-repeat fixed center;
             background-size: cover;
             background-blend-mode: saturation;
             // width: 30em;
@@ -246,7 +246,7 @@
             position: relative;
             left: 5%;
             margin-top: 35em;
-            background: url("../../../images/members/hoshi_attacca_op1.jpg") no-repeat fixed;
+            background: url("../../../images/members/hoshi/hoshi_attacca_op1.jpg") no-repeat fixed;
             background-size: cover;
             height: 20em;
             width: 20em;
@@ -435,28 +435,29 @@
             background-size: cover;
             background-blend-mode: saturation;
             margin-top: 20em;
-            margin-bottom: 3em;
-            filter: grayscale(100%);
+            margin-bottom: 5em;
             transition: .5s ease-in-out;
             text-align: center;
             padding: 2em;
-            z-index: -1;
+            z-index: 1;
+            height: 1em;
+            width:100%;
+            margin-left: auto;
+            margin-right: auto;
+            pointer-events: none;
+            position: relative;
             
             &::before{
                 content: "Sub-Units";
                 position: absolute;
                 font-size: 10em;
                 opacity: .5;
-                left: 1.8em;
-                width: 100%;
+                left: 30%;
+                width: 80%;
                 text-align: center;
-                
             }
 
-            &:hover{
-                filter: grayscale(0%);
-                transition: .5s ease-in;
-            }
+           
         }
 
 
@@ -537,6 +538,7 @@
                     margin-bottom: 2em;
                     text-align: right;
                     // max-width: 20%;
+                    z-index: 7;
 
                     &__names{
                         position: relative;
@@ -580,14 +582,16 @@
                     text-align: right;
                     padding: 2em;
                     margin-bottom: 2em;
-                    // z-index: 1;
+                    // z-index: -1;
                     opacity: 1;
+                    filter: grayscale(100%);
                     
                     &__names{
                         font-size: 1.2em;
                         color: white;
                         margin-bottom: .6em;
                         position: relative;
+                        // z-index: 2;
                         opacity: 1;
                         text-align: right;
                         margin-left: 75%;
@@ -612,7 +616,7 @@
                         opacity: .5;
                         writing-mode: vertical-lr;
                         text-orientation: upright;
-                        right: -0.1em;
+                        right: -0.5em;
                         margin-top: -0.15em;
                     }
 
@@ -620,6 +624,7 @@
                         transition: .5s ease-in-out;
                         background: url("../../../images/units/pu_2.jpeg") no-repeat fixed right;
                         background-size: cover;
+                        filter: grayscale(0%);
                     }
                 }
             }
@@ -724,7 +729,7 @@
                 &__television{
                     // position: relative;
                     margin-left: 1em;
-                    background: url("../../../images/members/jun_attacca_op1.jpg") no-repeat fixed;
+                    background: url("../../../images/members/dino/path_dino.jpeg") no-repeat fixed;
                     background-size: cover;
                     // background: pink;
                     background-blend-mode: saturation;
@@ -756,7 +761,7 @@
                     // position: absolute;
                     margin-top: 5em;
                     margin-left: 50%;
-                    background: url("../../../images/members/wonwoo_attacca_op1.jpg") no-repeat fixed;
+                    background: url("../../../images/members/wonwoo/ray_wonwoo.jpeg") no-repeat fixed;
                     background-size: cover;
                     background-blend-mode: saturation;
                     width: 25em;
@@ -824,11 +829,18 @@
 
         &__concerts{
             margin-top: 40%;
-            background: url("../../../images/home_page/attacca/attacca_group_photo_2.jpeg") no-repeat fixed center;
+            background: url("../../../images/group/path_group.jpeg") no-repeat fixed center;
             background-size: cover;
+            width: 100%;
             height: 80%;
             filter: grayscale(100%);
             transition: .5s ease-in;
+
+            span{
+                position: absolute;
+                top: -1.5em;
+                right: 0;
+            }
 
             p{
                 position: absolute;
